--- a/plotsStuffs.ipynb
+++ b/plotsStuffs.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -58,6 +58,29 @@
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.99, random_state=42\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.02259257,  0.65552289,  1.32683445,  1.04776374,  1.13474732,\n",
+       "         0.21051897,  0.19063997,  0.3315868 ,  1.36751246, -1.02478959,\n",
+       "        -0.94416348,  0.22018472, -1.1183886 ,  0.9303299 ,  1.06201489,\n",
+       "         0.41150156,  0.40510352,  0.98226539, -0.90752137,  1.96446595]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[:1]"
    ]
   },
   {
@@ -85,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -659,18 +682,26 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.16 ('ClasseStuffs': venv)",
+   "display_name": "Python 3.9.16 ('ClassStuffs': venv)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "104b8689142a13d8fe8791899be53676b5076657e11dc3c6f9d23937f9d01a00"
+    "hash": "56357ee1cf5071b3080ac0cddd88daadc7209bcbdc988b5ec9313a4b5e95985b"
    }
   }
  },
