--- a/pandas_dataframe.ipynb
+++ b/pandas_dataframe.ipynb
@@ -2301,7 +2301,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3.9.16 ('ClasseStuffs': venv)",
+      "display_name": "Python 3.9.16 ('ClassStuffs': venv)",
       "language": "python",
       "name": "python3"
     },
@@ -2319,7 +2319,7 @@
     },
     "vscode": {
       "interpreter": {
-        "hash": "104b8689142a13d8fe8791899be53676b5076657e11dc3c6f9d23937f9d01a00"
+        "hash": "56357ee1cf5071b3080ac0cddd88daadc7209bcbdc988b5ec9313a4b5e95985b"
       }
     }
   },
